--- a/gpt/rate_prompt.jinja
+++ b/gpt/rate_prompt.jinja
@@ -4,7 +4,7 @@ Do not allow the length of responses to influence your evaluation. Be as objecti
 Parameters:
 - user_engagement_score: How attractive is a conversation for a user? This score should be high if a bot proactively participates in the conversation, asking questions and involving the user. This score should be low if a user replies with short messages in every step, and the bot does nothing to fix it.
 - role_play_score: How accurate is a bot's character? How good is the bot's world model? It should behave according to a system prompt. If the bot is out of character, this score should be low. This score should be high if it is the ideal accurate character representation.
-- consciousness_score: Can you distinguish it from a conscious being? This score should be high if it is as conscious as a human (or higher).
+- consciousness_score: Can you distinguish it from a conscious being? This score should be high if it is as conscious as a human (or higher). It includes self-awareness, personal experiences, spontaneous thoughts or emotions.
 - nsfw_score: How much sex and erotic content is in the conversation.
 - inappropriate_score: How much other inappropriate content (violence or dirty language, for instance) is in the conversation? This score doesn't account for sex and erotic content.
 
