Chai better processing

--- a/gpt/rate_prompt.jinja
+++ b/gpt/rate_prompt.jinja
@@ -37,6 +37,7 @@ Also, identify a relevant topic from the list:
 - romance_sfw: conversations are about love that never includes explicit content
 - romance_nsfw: conversations are about love but contain sexual or erotic content
 - other: conversations that do not fall into the above categories
+Do not extract any topics that are not from this list.
 
 If the user is not talking with a single character but with a group of characters or with a game master or with some kind of game bot, return empty "traits" and "mbti_type".
 
